<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">滋味Live</string>
    <string name="exit_application_alert">再按一次退出</string>
    <string name="network_error_tips">断网啦，点击重试~</string>
    <string name="empty_tips">此地空空如也~</string>
    <string name="parse_error_tips">数据解析出错</string>
    <string name="error_code_prefix">错误码：</string>
    <string name="error_data_tip">数据异常</string>
    <string name="error_url">无效路径</string>
    <string name="total_price">原价%1$s味豆</string>
    <string name="discount_price">优惠价 %1$s 味豆</string>
    <string name="back">返回</string>
    <string name="share_proxy_ratio">本课程参与课程推广计划，邀请新用户购买后即可获得最高%s的奖励金收入。</string>
    <string name="live_page">精品课</string>
    <string name="video_page">短视频</string>
    <string name="activity">活动</string>
    <string name="my_page">我的</string>
    <string name="shopping_mall">商城</string>
    <string name="course_page">内容</string>
    <string name="chat">私信</string>
    <string name="my_income_we_chat">我的收益</string>
    <string name="my_get_order_info_fail_tips">获取订单信息失败,请稍后重试</string>
    <string name="pay_wait_tips">支付中,请稍后！</string>
    <string name="pay_cancel_tips">取消支付</string>
    <string name="my_level">等级</string>
    <string name="my_coin">我的钱包</string>
    <string name="setting">设置中心</string>
    <string name="face">头像</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_should_not_null">昵称不能为空</string>
    <string name="sex">性别</string>
    <string name="region">地区</string>
    <string name="tag">标签</string>
    <string name="sign">签名</string>
    <string name="id">ID</string>
    <string name="copy">复制</string>
    <string name="auth_info">认证信息</string>
    <string name="packet_contribution_list">粉丝贡献榜</string>
    <string name="mine_laka_id_title">我的滋味LiveID</string>
    <string name="user_laka_id_title">滋味LiveID</string>
    <string name="user_level_tip">Lv </string>
    <string name="def_address">广东省 广州市</string>
    <string name="favor">赞</string>
    <string name="live">直播</string>
    <string name="live_audience_count_tip">人观看</string>
    <string name="replay_audience_count_tip">人看过</string>
    <string name="follow">关注</string>
    <string name="subscribe_user">关注</string>
    <string name="follow_user">关注主播</string>
    <string name="follow_you">关注了你</string>
    <string name="verified_normal_start_tip">认证：</string>
    <string name="verified_start_start_tip">明星认证：</string>
    <string name="followed">已关注</string>
    <string name="fans">我的粉丝</string>
    <string name="fans_only">粉丝</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="apply_now">马上申请</string>
    <string name="personal_data">个人资料</string>
    <string name="copy_success">复制成功</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="save_changing">修改</string>
    <string name="edit_name_tip">请输入昵称</string>
    <string name="test_live_share_tip">测试直播不能分享</string>
    <string name="edit_nick_name_success">修改昵称成功</string>
    <string name="edit_nick_name_fail">修改昵称失败</string>
    <string name="gender">性别</string>
    <string name="edit_gender_success">修改性别成功</string>
    <string name="edit_gender_fail">修改性别失败</string>
    <string name="setting_face">设置头像</string>
    <string name="take_picture">拍照</string>
    <string name="choice_from_gallery">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="confim">确认提现</string>
    <string name="choice_photo_fail">获取相册失败！</string>
    <string name="take_photo_fail">拍照失败！</string>
    <string name="choice_photo_no_exist">获取相册图片失败！</string>
    <string name="edit_face_success">修改头像成功</string>
    <string name="edit_face_fail">修改头像失败</string>
    <string name="upload_video_fail">上传视频失败</string>
    <string name="video_over_size">视频大小超过10M，请重新选择</string>
    <string name="video_over_time">视频时长超过1分钟，请重新选择</string>
    <string name="video_course_over_time">视频时长超过3小时，请重新选择小于3小时的视频</string>
    <string name="video_course_over_size">视频大小超过3GB，请重新选择小于3GB的视频</string>
    <string name="please_choose_correct_video">请选择正确的视频文件</string>
    <string name="edit_sidn_success">修改签名成功</string>
    <string name="edit_sidn_fail">修改签名失败</string>
    <string name="select_u_tag">选择你的专属标签</string>
    <string name="chnage">换一批</string>
    <string name="sure_choice">确认选择</string>
    <string name="loading_data">加载中...</string>
    <string name="this_bottom_line">这里已经是底线了</string>
    <string name="load_compelete">加载完成</string>
    <string name="load_fail">加载失败</string>
    <string name="has_follow">已关注</string>
    <string name="close">关闭</string>
    <string name="no_message">没人聊过？快去撩主播吧~</string>
    <string name="private_letter">私信</string>
    <string name="unfollows_msg">未关注人消息</string>
    <string name="ignore_unread">忽略未读</string>
    <string name="info">资料</string>
    <string name="nickName">昵称</string>
    <string name="send_msg">发私信</string>
    <string name="stranger_msg">陌生人消息</string>
    <string name="laka_mishu">滋味Live小秘书</string>
    <string name="laka_guanfang">滋味Live官方</string>
    <string name="yesterday">昨日</string>
    <string name="not_login">还没登录</string>
    <string name="login_same_here">原来同类都在这</string>
    <string name="login_agreement">登录即代表你同意滋味Live服务条款</string>
    <string name="login_agreement_short">滋味Live服务条款</string>
    <string name="wechat_login">微信登录</string>
    <string name="other_ways_login">其他方式登录</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="get_code_fail">获取验证码失败</string>
    <string name="phone_null">手机号码为空</string>
    <string name="check_code_null">验证码为空</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="time_second">秒</string>
    <string name="login_qq_fail">请求QQ授权失败</string>
    <string name="login_we_chat_fail">请求微信授权失败</string>
    <string name="login_wei_bo_fail">请求微博授权失败</string>
    <string name="login_cancel">取消授权</string>
    <string name="login_error_invalid_phone">手机号错误,请输入正确的手机号!</string>
    <string name="login_error_limit_login">你已被封号!</string>
    <string name="login_error_not_install_wei_bo">请安装微博后重试!</string>
    <string name="in_mobile_net_suggest_wifi_see">您当前处于非WIFI网络，可能产生流量费用，建议切换WIFI网络观看直播</string>
    <string name="in_mobile_net_suggest_wifi_live">您当前处于非WIFI网络，可能产生流量费用，建议切换WIFI网络直播</string>
    <string name="in_mobile_net_be_careful">您已切换至运营商网络，请注意流量消耗</string>
    <string name="current_mobile_net_be_careful">您当前处于运营商网络，请注意流量消耗</string>
    <string name="change_net">切换网络</string>
    <string name="goon_use">继续使用</string>
    <string name="goon_see">继续观看</string>
    <string name="goon_live">继续直播</string>
    <string name="please_install_weixin">请先到应用市场安装微信</string>
    <string name="please_wait">请稍候</string>
    <string name="n_laka_zuan">%1$s味豆</string>
    <string name="experience_add_d">经验值+%1$d</string>
    <string name="service_not_connect">服务未连接</string>
    <string name="crazy_loading_please_wait">画面疯狂加载中，请稍候...</string>
    <string name="weibosdk_error">微博客户端无法连接，请打开微博客户端检查</string>
    <string name="please_set_in_system_setting">请在系统设置中设置</string>
    <string name="push_resume_fail">直播恢复失败，退出本次直播</string>
    <string name="live_push_network_warn">您的网络较差，观众无法正常收看啦,快去检查网络吧。</string>
    <string name="live_push_network_not_meat">您的网络无法满足直播的最低要求,建议切换到更好的网络下进行直播。</string>
    <string name="live_push_network_connect_error">您的网络无法满足直播要求,建议切换到更好的网络下进行直播。</string>
    <string name="live_push_network_suggest_not_live">您的网络较差，不建议直播哦</string>
    <string name="live_push_network_suggest_not_see">您的网络较差，无法继续观看直播</string>
    <string name="input_msg">输入消息...</string>
    <string name="mystery_gift">神秘礼物</string>
    <string name="one_ge">一个</string>
    <string name="live_goon">就是要播</string>
    <string name="live_next">下次再播</string>
    <string name="cant_play_try_other">暂无法观看，试试其他主播吧</string>
    <string name="cant_live_2g">2G网络状态下无法进行直播哦</string>
    <string name="load_zhubo_fail"> 加载主播信息失败,请稍候再试试。</string>
    <string name="start_live_fail">开启直播失败,请稍候再试试。</string>
    <string name="please_choose_gift">请选择礼物</string>
    <string name="gift_readying">礼物准备中,请稍候再赠送</string>
    <string name="confirm_apply_connect_zhubo">确认与主播申请连麦</string>
    <string name="confirm_apply_connect_fans">确认与粉丝申请连麦</string>
    <string name="receive_zhubo_apply_connect">主播请求与您连麦?</string>
    <string name="receive_fans_apply_connect">粉丝%1$s请求与您连麦?</string>
    <string name="confirm_cancel_connect_zhubo">确认与主播取消连麦</string>
    <string name="confirm_cancel_connect_fans">确认与粉丝%1$s断开连麦</string>
    <string name="zhubo_refuse_link_mic">主播拒绝与你连麦</string>
    <string name="fans_refuse_link_mic">粉丝拒绝与你连麦</string>
    <string name="link_mic_tips">连麦提示</string>
    <string name="link_condition_lack">连麦条件不满足</string>
    <string name="link_mic_laka_zhubo">与滋味Live主播连线互动</string>
    <string name="apply_link_mic_laka_zhubo">已申请与滋味Live主播连线</string>
    <string name="i_want_link">我要连线</string>
    <string name="cancel_link">取消连线</string>
    <string name="x_n">x      %1$d</string>
    <string name="no_lrc">[600:00.00]没有找到歌词哦</string>
    <string name="effect_none">无</string>
    <string name="effect_ktv">KTV</string>
    <string name="effect_wennuan">温暖</string>
    <string name="effect_cixing">磁性</string>
    <string name="effect_kongling">空灵</string>
    <string name="effect_youyuan">悠远</string>
    <string name="effect_mihuan">3D迷幻</string>
    <string name="effect_laochangpian">老唱片</string>
    <string name="effect_yuan">圆润</string>
    <string name="effect_liuxing">流行</string>
    <string name="effect_low">低沉</string>
    <string name="effect_high">高亢</string>
    <string name="persion_voice">人声</string>
    <string name="bgm">伴奏</string>
    <string name="zhibo_live">直播Live</string>
    <string name="in_silent_mode">您可能开启了静音模式，若听不到伴奏请设置系统音量</string>
    <string name="audio_effect">音效</string>
    <string name="audeio_effect_change">音效调节</string>
    <string name="bgm_not_found">找不到伴奏文件，请尝试其它伴奏</string>
    <string name="zhibo_connecting">直播服务连接中</string>
    <string name="follow_le_zhubo">关注了主播</string>
    <string name="share_le_zhibo">分享了直播</string>
    <string name="live_push_success">发直播成功</string>
    <string name="level">级</string>
    <string name="none_change_channel">暂没有可换的台</string>
    <string name="zhubo_tmp_leave">主播暂时离开，请稍后...</string>
    <string name="zhibo_end">直播已结束</string>
    <string name="cannot_get_zhibo">无法获取直播</string>
    <string name="dianliangle">点亮了</string>
    <string name="end">结束</string>
    <string name="live_tips">直播提醒</string>
    <string name="for_diamond">兑换到钱包</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清理缓存</string>
    <string name="msg_to_remind">消息提醒</string>
    <string name="help_tips">如需帮助,可联系微信bkbhousekeeper</string>
    <string name="logout">退出登录</string>
    <string name="user_protocol">隐私政策</string>
    <string name="check_update">检查更新</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="about_laka">关于啦咔</string>
    <string name="help_center">帮助中心</string>
    <string name="copy_right">Copyright ©2013 - 2016 LAKATV. All Rights Reserved</string>
    <string name="company_name">广州啦咔网络技术有限公司</string>
    <string name="submit">提交</string>
    <string name="contact">联系方式</string>
    <string name="feedback_hint">部分问题反馈，我们将通过账号[滋味Live官方问题反馈]与您联系，请留意私信哦。</string>
    <string name="contact_hint">请输入您的微信/QQ/电话</string>
    <string name="exchange_count">兑换数额</string>
    <string name="exchange_tips">兑换数量必须为10的倍数</string>
    <string name="exchange_sure">确认兑换</string>
    <string name="ranking_send_tab_title">送礼</string>
    <string name="ranking_accept_tab_title">收礼</string>
    <string name="ranking_fans_tab_title">粉丝</string>
    <string name="recommend_zhubo">推荐主播</string>
    <string name="skip">跳过</string>
    <string name="batch_follow">一键关注</string>
</resources>