<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.setting.AboutUsActivity">

    <com.laka.live.ui.widget.HeadView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:headText="@string/about_us"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_18"
        android:gravity="center_horizontal"
        android:layout_below="@id/head"
        android:drawableTop="@drawable/icon_aboutus"
        android:drawablePadding="@dimen/space_10"
        android:textColor="@color/color848484"
        android:textSize="@dimen/space_14"
        android:text="版本"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/version">

        <View style="@style/horizontal_divider"/>
        
        <TextView
            android:id="@+id/user_protocol"
            android:text="@string/user_protocol"
            style="@style/setting_item"/>

        <View style="@style/horizontal_divider_margin_left_15dp"/>

        <TextView
            android:id="@+id/check_update"
            android:text="@string/check_update"
            style="@style/setting_item"/>

        <View style="@style/horizontal_divider_margin_left_15dp"/>

        <TextView
            android:id="@+id/help_center"
            android:text="@string/help_center"
            style="@style/setting_item"/>

        <View style="@style/horizontal_divider_margin_left_15dp"/>

        <TextView
            android:id="@+id/about_laka"
            android:text="@string/about_laka"
            style="@style/setting_item"/>

        <View style="@style/horizontal_divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_20"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color666666"
            android:textSize="@dimen/space_12"
            android:text="@string/copy_right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color666666"
            android:textSize="@dimen/space_12"
            android:text="@string/company_name"
            android:layout_marginTop="@dimen/space_4"/>
    </LinearLayout>
</RelativeLayout>
