<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ActivityBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.laka.live.ui.widget.HeadView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:headText="@string/personal_data"
            custom:headColor="@color/color2E2E2E"/>

        <View
            style="@style/horizontal_divider"
            android:layout_marginTop="@dimen/big_divider_height"/>

        <RelativeLayout
            android:id="@+id/face_item"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/list_item_selector">

            <com.laka.live.ui.widget.MyInfoItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                custom:key="@string/face"
                custom:keySize="@dimen/space_14"
                custom:keyColor="@color/color333333"/>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/user_face"
                android:layout_width="@dimen/space_60"
                android:layout_height="@dimen/space_60"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                custom:placeholderImage="@drawable/blank_icon_avatar"
                custom:roundAsCircle="true"/>
        </RelativeLayout>

        <View
            style="@style/horizontal_divider_margin_left_15dp"
            android:layout_marginLeft="@dimen/space_15"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <com.laka.live.ui.widget.MyInfoItemView
                android:id="@+id/nick_name_item"
                style="@style/my_item_style"
                custom:key="@string/nick_name"
                custom:keyColor="@color/color333333"
                custom:keySize="@dimen/space_14"
                custom:valueColor="@color/color999999"
                custom:valueSize="@dimen/space_14"/>

            <View
                style="@style/horizontal_divider_margin_left_15dp"
                android:layout_marginLeft="@dimen/space_15"/>

            <com.laka.live.ui.widget.MyInfoItemView
                android:id="@+id/sex_item"
                style="@style/my_item_style"
                custom:key="@string/sex"
                custom:keyColor="@color/color333333"
                custom:keySize="@dimen/space_14"
                custom:valueColor="@color/color999999"
                custom:valueSize="@dimen/space_14"/>

            <View
                style="@style/horizontal_divider_margin_left_15dp"
                android:layout_marginLeft="@dimen/space_15"/>

            <com.laka.live.ui.widget.MyInfoItemView
                android:id="@+id/region_item"
                style="@style/my_item_style"
                custom:key="@string/region"
                custom:keyColor="@color/color333333"
                custom:keySize="@dimen/space_14"
                custom:valueColor="@color/color999999"
                custom:valueSize="@dimen/space_14"/>

            <View
                style="@style/horizontal_divider_margin_left_15dp"
                android:layout_marginLeft="@dimen/space_15"/>

            <com.laka.live.ui.widget.MyInfoItemView
                android:id="@+id/tag_item"
                style="@style/my_item_style"
                custom:key="@string/tag"
                custom:keyColor="@color/color333333"
                custom:keySize="@dimen/space_14"
                custom:valueColor="@color/color999999"
                custom:valueSize="@dimen/space_14"
                android:visibility="gone"/>

            <com.laka.live.ui.widget.MyInfoItemView
                android:id="@+id/sign_item"
                style="@style/my_item_style"
                custom:key="@string/sign"
                custom:keyColor="@color/color333333"
                custom:keySize="@dimen/space_14"
                custom:valueColor="@color/color999999"
                custom:valueSize="@dimen/space_14"/>
        </LinearLayout>


        <com.laka.live.ui.widget.MyInfoItemView
            android:id="@+id/auto_info_item"
            style="@style/my_item_style"
            android:visibility="gone"
            custom:key="@string/auth_info"
            custom:keyColor="@color/color333333"
            custom:keySize="@dimen/space_14"
            custom:valueColor="@color/color999999"
            custom:valueSize="@dimen/space_14"/>

    </LinearLayout>
</ScrollView>
