<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rank_bg"
    android:orientation="vertical">

    <com.laka.live.ui.widget.AlphaTextView
        android:id="@+id/back_icon"
        style="@style/title_back_view"
        android:drawableLeft="@drawable/title_icon_back02_selector"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/head_height"
        android:textColor="@color/white"
        android:text="@string/back" />

    <LinearLayout
        android:id="@+id/tab_parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/head_height"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accept"
            style="@style/RankingTab"
            android:text="@string/ranking_accept_tab_title"
            android:background="@drawable/rank_left_tab_bg"/>

        <TextView
            android:id="@+id/fans"
            style="@style/RankingTab"
            android:layout_marginLeft="-1dp"
            android:layout_marginRight="-1dp"
            android:text="@string/ranking_fans_tab_title"
            android:background="@drawable/rank_mid_tab_bg"/>

        <TextView
            android:id="@+id/send"
            style="@style/RankingTab"
            android:text="@string/ranking_send_tab_title"
            android:background="@drawable/rank_right_tab_bg"/>
    </LinearLayout>

    <TabWidget
        android:id="@android:id/tabs"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"/>

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/head_height"/>
</TabHost>