<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.laka.live.ui.widget.HeadView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tipText="@string/skip"
        app:tipSize="15dp"
        app:headText="@string/recommend_zhubo" />

    <com.laka.live.ui.widget.PageListLayout
        android:id="@+id/recommend_list"
        android:layout_below="@id/head"
        android:layout_above="@+id/batch_follow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/batch_follow"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:clickable="true"
        android:onClick="batchFollow"
        android:background="@color/colorFAFAFA"
        android:gravity="center"
        android:text="@string/batch_follow"
        android:textColor="@color/color333333"
        android:textSize="15dp"/><!--   android:textColor="@color/theme_red_color_selector" -->

    <View
        android:layout_above="@id/batch_follow"
        android:background="@color/colorD9D9D9"
        style="@style/horizontal_divider"/>
</RelativeLayout>
